--- a/src/test/resources/application.yaml
+++ b/src/test/resources/application.yaml
@@ -1,8 +1,11 @@
 spring:
+#  datasource:
+#    url: jdbc:h2:mem:test
   jpa:
     show-sql: true
     properties:
       hibernate:
+#        dialect: org.hibernate.dialect.H2Dialect
         format_sql: true
 
 logging:
