Gradle: kotlin-logging added, DeviceController: logging added

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -9,6 +9,7 @@ spring:
 
 logging:
   level:
+    de.igorakkerman.demo: DEBUG
 #    org.hibernate: DEBUG
     org.hibernate.type: TRACE
 #    org.springframework.transaction: TRACE
