--- a/src/test/resources/application.yaml
+++ b/src/test/resources/application.yaml
@@ -27,6 +27,10 @@ spring:
       maxLifetime: 360000
 #      connectionTestQuery: SELECT 1 FROM DUAL
 
+logbook:
+  format:
+    style: http
+
 logging:
   level:
     de.igorakkerman.demo: DEBUG
@@ -36,8 +40,8 @@ logging:
 #    org.hibernate.jpa.internal.util.LogHelper: DEBUG
     org.hibernate.SQL: DEBUG
     org.hibernate.tool.hbm2ddl: DEBUG
-    org.springframework.test.context: INFO
+#    org.springframework.test.context: INFO
 #    org.springframework.transaction: TRACE
 #    org.springframework.web.servlet.mvc.method.annotation.RequestResponseBodyMethodProcessor: DEBUG
 #    org.springframework.web.filter.CommonsRequestLoggingFilter: DEBUG
-
+    org.zalando.logbook: TRACE
