--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,3 +1,10 @@
+# server:
+#  ssl:
+#    enabled: true
+#    key-stora-type: PKCS12
+#    key-store: path/to.p12
+#    key-store-password:
+
 spring:
 #  datasource:
 #    url: jdbc:h2:mem:test
