--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,7 +1,8 @@
-# server:
+server:
+  port: 8080
 #  ssl:
 #    enabled: true
-#    key-stora-type: PKCS12
+#    key-store-type: PKCS12
 #    key-store: path/to.p12
 #    key-store-password:
 
