--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -10,12 +10,13 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-      - name: Set up JDK 15
+      - name: Git checkout
+        uses: actions/checkout@v2
+      - name: JDK 15 setup
         uses: actions/setup-java@v1
         with:
           java-version: 15
-      - name: Grant execute permission for gradlew
-        run: chmod +x gradlew
-      - name: Build with Gradle
-        run: ./gradlew build
+      - name: Gradle build
+        run: |
+          chmod +x gradlew
+          ./gradlew build
