application.yaml: logging optimized for prod and test

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -13,7 +13,8 @@ spring:
     properties:
       hibernate:
 #        dialect: org.hibernate.dialect.H2Dialect
-        format_sql: true
+        show_sql: false        # SQL to console, bypassing logger
+        format_sql: true       # SQL to log AND console
 
   jackson:
     deserialization:
@@ -21,20 +22,4 @@ spring:
 
 logging:
   level:
-
-    de.igorakkerman.demo: DEBUG
-
-#    org.hibernate: DEBUG
-    org.hibernate.type: TRACE
-#    org.hibernate.type: TRACE
-#    org.hibernate.internal.util.EntityPrinter: DEBUG
-#    org.hibernate.jpa.internal.util.LogHelper: DEBUG
-    org.hibernate.SQL: DEBUG
-    org.hibernate.tool.hbm2ddl: DEBUG
-
-#    org.springframework.test.context: INFO
-#    org.springframework.transaction: TRACE
-#    org.springframework.web.servlet.mvc.method.annotation.RequestResponseBodyMethodProcessor: DEBUG
-#    org.springframework.web.filter.CommonsRequestLoggingFilter: DEBUG
-
-#    org.zalando.logbook: TRACE
+    de.igorakkerman.demo: INFO
