--- a/src/test/resources/application.yaml
+++ b/src/test/resources/application.yaml
@@ -14,10 +14,10 @@ spring:
   jpa:
     properties:
       hibernate:
-        show_sql: true
-        format_sql: true
         ddl-auto: validate
   #        dialect: org.hibernate.dialect.H2Dialect
+        show_sql: false        # SQL to console, bypassing logger
+        format_sql: true       # SQL to log AND console
 
   datasource:
     hikari:
@@ -32,16 +32,18 @@ logbook:
     style: http
 
 logging:
+  register-shutdown-hook: true
   level:
     de.igorakkerman.demo: DEBUG
+    org.zalando.logbook: TRACE
+#    org.springframework.test.context: INFO
+    org.springframework.transaction: TRACE
+#    org.springframework.web.servlet.mvc.method.annotation.RequestResponseBodyMethodProcessor: DEBUG
+#    org.springframework.web.filter.CommonsRequestLoggingFilter: DEBUG
 #    org.hibernate: DEBUG
 #    org.hibernate.type: TRACE
 #    org.hibernate.internal.util.EntityPrinter: DEBUG
 #    org.hibernate.jpa.internal.util.LogHelper: DEBUG
     org.hibernate.SQL: DEBUG
     org.hibernate.tool.hbm2ddl: DEBUG
-#    org.springframework.test.context: INFO
-#    org.springframework.transaction: TRACE
-#    org.springframework.web.servlet.mvc.method.annotation.RequestResponseBodyMethodProcessor: DEBUG
-#    org.springframework.web.filter.CommonsRequestLoggingFilter: DEBUG
-    org.zalando.logbook: TRACE
+
