application.yaml test: OpenAPI config added

--- a/src/test/resources/application.yaml
+++ b/src/test/resources/application.yaml
@@ -31,6 +31,12 @@ logbook:
   format:
     style: http
 
+springdoc:
+  api-docs:
+    enabled: false
+  swagger-ui:
+    enabled: false
+
 logging:
   register-shutdown-hook: true
   level:
