--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,6 +1,3 @@
-server:
-  port: 8080
-
 spring:
   datasource:
     url: jdbc:postgresql://${DB_HOSTNAME}:${DB_PORT:5432}/${DB_NAME}
@@ -17,8 +14,7 @@ spring:
         show_sql: false        # SQL to console, bypassing logger
         format_sql: true       # SQL to log AND console
     hibernate:
-      ddl-auto: create # TODO: change to validate
-
+      ddl-auto: update
 
   jackson:
     deserialization:
